--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
-    "@angular/common": "^16.2.0",
+    "@angular/common": "^16.2.7",
     "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
+    "@angular/core": "^16.2.7",
     "@angular/forms": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@datorama/akita-ng-entity-service": "^8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "bootstrap": "^5.3.2",
+    "font-awesome": "^4.7.0",
+    "ngx-cookie-service": "^16.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
