--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
+  "preserveSymlinks": true,
   "compilerOptions": {
-    "baseUrl": "./",
+    "strictPropertyInitialization": false,
+    "baseUrl": "src",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -16,6 +18,8 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "paths": {
+      "@angular/*": ["./node_modules/@angular/*"]},
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
@@ -25,9 +29,14 @@
     ]
   },
   "angularCompilerOptions": {
+    "preserveSymlinks": true,
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "allowSyntheticDefaultImports": true,
+    "strictTemplates": true,
+
   }
 }
+
+
